--- a/Shaun Stoltz/test-output/index.html
+++ b/Shaun Stoltz/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>G:\Eclipse\Workspace\Dropbox\LogicWorkSpace\Shaun Stoltz\testng.xml</span>
+                    <span>C:\Users\I3CLOGIC\git\Shaun Stoltz\Shaun Stoltz\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.gopromis.ScriptTest" hash-for-method="createEntityTest">createEntityTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.gopromis.ScriptTest" hash-for-method="searchEntityTest">searchEntityTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -124,9 +124,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createEntityTest">
-                  </a> <!-- createEntityTest -->
-                  <span class="method-name">createEntityTest</span>
+                  <a name="searchEntityTest">
+                  </a> <!-- searchEntityTest -->
+                  <span class="method-name">searchEntityTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">G:\Eclipse\Workspace\Dropbox\LogicWorkSpace\Shaun Stoltz\testng.xml</span>
+            <span class="header-content">C:\Users\I3CLOGIC\git\Shaun Stoltz\Shaun Stoltz\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.gopromis.ScriptTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;createEntityTest&quot;/&gt;
+          &lt;include name=&quot;searchEntityTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.gopromis.ScriptTest --&gt;
     &lt;/classes&gt;
@@ -189,14 +189,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createEntityTest')
+data.setCell(0, 1, 'searchEntityTest')
 data.setCell(0, 2, 'com.gopromis.ScriptTest')
-data.setCell(0, 3, 32315);
+data.setCell(0, 3, 46859);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 46 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -211,13 +211,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.gopromis.ScriptTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">login</span>
+                <br/>
+                <span class="ignored-method-name">createEntityTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -235,12 +237,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">createEntityTest</span>
-                <span class="method-start">12637 ms</span>
+                <span class="method-name">searchEntityTest</span>
+                <span class="method-start">11041 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">44983 ms</span>
+                <span class="method-start">57941 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
