--- a/Shaun Stoltz/test-output/old/Suite/methods-not-run.html
+++ b/Shaun Stoltz/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,4 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.gopromis.ScriptTest.login<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>log in</i></td></tr>
+<tr><td>com.gopromis.ScriptTest.createEntityTest<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Create New Entity</i></td></tr>
 </table>
