--- a/Shaun Stoltz/test-output/old/Suite/classes.html
+++ b/Shaun Stoltz/test-output/old/Suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>searchEntityTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>createEntityTest</td>
 <td>&nbsp;</td></tr>
 <tr>
