--- a/Shaun Stoltz/test-output/old/Suite/methods.html
+++ b/Shaun Stoltz/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b7980">  <td>12/10/10 19:25:55</td>   <td>0</td> <td title="&gt;&gt;BasicSetUp.setUp()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23710309</td>   <td></td> </tr>
-<tr bgcolor="8ab4f9">  <td>12/10/10 19:26:07</td>   <td>12637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScriptTest.createEntityTest()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">createEntityTest</td> 
-  <td>main@23710309</td>   <td></td> </tr>
-<tr bgcolor="6b7980">  <td>12/10/10 19:26:40</td>   <td>44983</td> <td title="&lt;&lt;BasicSetUp.tearDown()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23710309</td>   <td></td> </tr>
+<tr bgcolor="6b7980">  <td>12/10/19 18:11:29</td>   <td>0</td> <td title="&gt;&gt;BasicSetUp.setUp()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@970341</td>   <td></td> </tr>
+<tr bgcolor="8ab4f9">  <td>12/10/19 18:11:40</td>   <td>11030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScriptTest.searchEntityTest()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">searchEntityTest</td> 
+  <td>main@970341</td>   <td></td> </tr>
+<tr bgcolor="6b7980">  <td>12/10/19 18:12:27</td>   <td>57930</td> <td title="&lt;&lt;BasicSetUp.tearDown()[pri:0, instance:com.gopromis.ScriptTest@5e3974]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@970341</td>   <td></td> </tr>
 </table>
